# plex-favourites-shuffle

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
src/: App.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: FavouritesView.jsx  PlexConfig.jsx
src/hooks/: useConfig.js  usePlayback.js  usePlexFavourites.js
src/lib/: format.js  plex.js
src/styles/: global.css  tokens.css
