[package]
name = "heartflow"
version = "0.1.0"
description = "Favourites shuffle player for Plex"
authors = ["Doug Belshaw"]
license = "AGPL-3.0"
repository = "https://github.com/dajbelshaw/plex-favourites-shuffle"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.10.3", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
